--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,9 @@
 
 :root {
   --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
+  /* --background-start-rgb: 214, 219, 220; */
+  --background-start-rgb: 224, 242, 254; /* sky-100 */
+  
   --background-end-rgb: 234, 234, 234;
 }
 
