--- a/app/v3/globals.css
+++ b/app/v3/globals.css
@@ -6,7 +6,7 @@
   --foreground-rgb: 0, 0, 0;
   /* --background-start-rgb: 214, 219, 220; */
   --background-start-rgb: 224, 242, 254; /* sky-100 */
-
+  
   --background-end-rgb: 234, 234, 234;
 }
 
@@ -26,8 +26,9 @@
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
-    to bottom,
-    transparent,
-    rgba(var(--background-end-rgb), 0.75)
-  );
+      to bottom,
+      transparent,
+      rgb(var(--background-end-rgb))
+    )
+    rgb(var(--background-start-rgb));
 }
